# nullslop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  justfile
.ba/: config.json  issues.jsonl
actors/nullslop-context-actor/: Cargo.toml
actors/nullslop-context-actor/src/: lib.rs
actors/nullslop-echo/: Cargo.toml
actors/nullslop-echo/src/: lib.rs
actors/nullslop-llm/: Cargo.toml
actors/nullslop-llm-discover/: Cargo.toml
actors/nullslop-llm-discover/src/: lib.rs
actors/nullslop-llm/src/: lib.rs
actors/nullslop-tool-orchestrator/: Cargo.toml
actors/nullslop-tool-orchestrator/src/: lib.rs
crates/nullslop-actor/: Cargo.toml
crates/nullslop-actor-host/: Cargo.toml
crates/nullslop-actor-host/src/: actor_host.rs  error.rs  fake.rs  in_memory.rs  lib.rs  routing.rs
crates/nullslop-actor/src/: actor.rs  actor_ref.rs  context.rs  envelope.rs  error.rs  lib.rs  message_sink.rs
crates/nullslop-cli/: Cargo.toml
crates/nullslop-cli/src/: app.rs  cli.rs  headless_ext_sender.rs  lib.rs  run.rs
crates/nullslop-component/: Cargo.toml
crates/nullslop-component/src/: app_state.rs  custom_command.rs  lib.rs  quit_handler.rs  shutdown.rs
crates/nullslop-component/src/app_quit/: handler.rs  mod.rs
crates/nullslop-component/src/char_counter/: element.rs  mod.rs
crates/nullslop-component/src/chat_input_box/: element.rs  handler.rs  mod.rs  state.rs
crates/nullslop-component/src/chat_log/: element.rs  handler.rs  mod.rs
crates/nullslop-component/src/chat_session/: mod.rs  state.rs
crates/nullslop-component/src/dashboard/: element.rs  handler.rs  mod.rs  state.rs
crates/nullslop-component/src/provider/: handler.rs  indicator.rs  mod.rs  prompt_handler.rs  queue_element.rs  refresh_handler.rs  request_handler.rs  switch_handler.rs
crates/nullslop-component/src/provider_picker/: entries.rs  handler.rs  mod.rs  state.rs
crates/nullslop-component/src/shutdown_tracker/: handler.rs  mod.rs  state.rs
crates/nullslop-component/src/tab_nav/: handler.rs  mod.rs
crates/nullslop-context/: Cargo.toml
crates/nullslop-context/src/: lib.rs
crates/nullslop-context/src/strategy/: compaction.rs  compaction_data.rs  factory.rs  mod.rs  passthrough.rs  sliding_window.rs  token_budget.rs  token_estimator.rs  types.rs
crates/nullslop-core/: Cargo.toml
crates/nullslop-core/src/: actor_sink.rs  app_core.rs  app_data.rs  app_msg.rs  app_state.rs  chat.rs  command.rs  core_ext_sender.rs  event.rs  ext_host.rs  extension.rs  key.rs  lib.rs  state.rs
crates/nullslop-core/src/extension/: manifest.rs
crates/nullslop-ext-host/: Cargo.toml
crates/nullslop-ext-host/src/: discovery.rs  fake.rs  host.rs  in_memory.rs  lib.rs  process.rs
crates/nullslop-extension/: Cargo.toml
crates/nullslop-extension/src/: codec.rs  context.rs  extension.rs  lib.rs  macros.rs
crates/nullslop-plugin/: Cargo.toml
crates/nullslop-plugin/src/: bus.rs  core_dispatcher.rs  custom_command.rs  extension_command.rs  fake.rs  handler.rs  lib.rs  macros.rs  out.rs  quit_handler.rs  shutdown.rs
crates/nullslop-plugin/src/char_counter/: element.rs  mod.rs
crates/nullslop-plugin/src/chat_input_box/: element.rs  handler.rs  mod.rs
crates/nullslop-plugin/src/chat_log/: element.rs  mod.rs
crates/nullslop-protocol/: Cargo.toml
crates/nullslop-protocol/src/: action.rs  actor_name.rs  app_data.rs  app_state.rs  chat.rs  chat_input_state.rs  command.rs  event.rs  extension_name.rs  key.rs  lib.rs  mode.rs  picker_kind.rs  session.rs
crates/nullslop-protocol/src/actor/: command.rs  event.rs  mod.rs
crates/nullslop-protocol/src/chat_input/: command.rs  event.rs  mod.rs  state.rs
crates/nullslop-protocol/src/context/: command.rs  event.rs  mod.rs  strategy_id.rs
crates/nullslop-protocol/src/custom/: command.rs  derive_tests.rs  event.rs  mod.rs
crates/nullslop-protocol/src/extension/: event.rs  mod.rs
crates/nullslop-protocol/src/provider/: command.rs  convert.rs  event.rs  message.rs  mod.rs
crates/nullslop-protocol/src/provider_picker/: command.rs  mod.rs
crates/nullslop-protocol/src/shutdown/: command.rs  event.rs  mod.rs
crates/nullslop-protocol/src/system/: command.rs  event.rs  mod.rs
crates/nullslop-protocol/src/tab/: active_tab.rs  command.rs  mod.rs
crates/nullslop-protocol/src/tool/: command.rs  event.rs  mod.rs  types.rs
crates/nullslop-providers/: Cargo.toml
crates/nullslop-providers/src/: api_keys.rs  api_keys_service.rs  config.rs  config_storage.rs  convert.rs  default_providers.toml  fake.rs  generic_factory.rs  lib.rs  model_cache.rs  no_providers.rs  openrouter.rs  provider_id.rs  registry.rs  registry_service.rs  resolved_provider.rs  sample.rs  service.rs  service_wrapper.rs  stream_event.rs
crates/nullslop-services/: Cargo.toml
crates/nullslop-services/src/: lib.rs  test_services.rs
crates/nullslop-tui/: Cargo.toml
crates/nullslop-tui/src/: app.rs  app_state.rs  command.rs  config.rs  convert.rs  ext.rs  keymap.rs  lib.rs  msg.rs  render.rs  run.rs  scope.rs  selection.rs  services.rs  suspend.rs  terminal.rs  tui_state.rs
crates/nullslop-tui/src/ext/: discovery.rs  fake.rs  host.rs  process.rs
crates/nullslop-tui/src/msg/: handler.rs  sender.rs
crates/nullslop-tui/src/plugin/: core_dispatcher.rs  extension_command.rs  input_mode.rs  mod.rs  normal_mode.rs
extensions/nullslop-echo/: Cargo.toml  manifest.json
extensions/nullslop-echo/src/: lib.rs  main.rs
tests/nullslop-cucumber/: Cargo.toml
tests/nullslop-cucumber/tests/features/bus/: chat_input.feature  message_queue.feature  provider_picker.feature  provider_switch.feature
tests/nullslop-e2e/: Cargo.toml
tests/nullslop-e2e/tests/: actor_cucumber.rs  actor_world.rs  bus_cucumber.rs  bus_world.rs  cucumber.rs  world.rs
tests/nullslop-e2e/tests/features/actor/: tool_loop.feature
tests/nullslop-e2e/tests/features/bus/: chat_input.feature  chat_log.feature  dashboard_selection.feature  message_queue.feature  provider_refresh.feature  shutdown_tracker.feature  strategy_switching.feature
tests/nullslop-e2e/tests/features/tui/: headless_script.feature  tui_app.feature
(+42 files in other folders)
