[package]
name = "nullslop"
version = "0.1.0"
edition = "2024"
resolver = "3"
default-run = "nullslop"

[workspace]
members = [
    "crates/*",
    "extensions/*",
]

[lib]
path = "src/lib.rs"

[dependencies]
nullslop-cli = { workspace = true }

[workspace.dependencies]
# Internal
nullslop-protocol = { path = "crates/nullslop-protocol" }
nullslop-core = { path = "crates/nullslop-core" }
nullslop-tui = { path = "crates/nullslop-tui" }
nullslop-extension = { path = "crates/nullslop-extension" }
nullslop-component-core = { path = "crates/nullslop-component-core" }
nullslop-component-ui = { path = "crates/nullslop-component-ui" }
nullslop-component = { path = "crates/nullslop-component" }
nullslop-ext-host = { path = "crates/nullslop-ext-host" }
nullslop-cli = { path = "crates/nullslop-cli" }
nullslop-services = { path = "crates/nullslop-services" }
nullslop-echo = { path = "extensions/nullslop-echo" }

# Error handling
wherror = "2.3.1"
error-stack = { version = "0.7", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async / channels
tokio = { version = "1", features = ["full"] }
kanal = "0.1"
futures = "0.3"

# UI
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-which-key = { path = "../ratatui-which-key" }
ratatui-tabs = { path = "../ratatui-tabs" }
ratatui-spatial-splits = { path = "../ratatui-spatial-splits" }

# State
parking_lot = "0.12"

# Time
jiff = { version = "0.2", features = ["serde"] }

# DX
derive_more = { version = "2", features = ["debug", "display"] }
rstest = "0.24"
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }

# Other
dirs = "6"
unicode-segmentation = "1"
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
implicit_hasher = "allow"
