[package]
name = "nullslop"
version = "0.1.0"
edition = "2024"
resolver = "3"
default-run = "nullslop"

[workspace]
members = ["crates/*", "actors/*"]

[lib]
path = "src/lib.rs"

[dependencies]
nullslop-cli = { workspace = true }
nullslop-tui = { workspace = true }
nullslop-core = { workspace = true }
nullslop-services = { workspace = true }
nullslop-providers = { workspace = true }
nullslop-component = { workspace = true }
nullslop-actor-host = { workspace = true }
nullslop-actor = { workspace = true }
nullslop-echo = { workspace = true }
nullslop-llm = { workspace = true }
tokio = { workspace = true }
kanal = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
ratatui-which-key = { workspace = true }
nullslop-protocol = { workspace = true, features = ["which-key"] }
tempfile = { workspace = true }
dotenvy = { workspace = true }

[workspace.dependencies]
# Internal
nullslop-protocol = { path = "crates/nullslop-protocol" }
nullslop-core = { path = "crates/nullslop-core" }
nullslop-tui = { path = "crates/nullslop-tui" }
nullslop-component-core = { path = "crates/nullslop-component-core" }
nullslop-component-ui = { path = "crates/nullslop-component-ui" }
nullslop-component = { path = "crates/nullslop-component" }
nullslop-cli = { path = "crates/nullslop-cli" }
nullslop-services = { path = "crates/nullslop-services" }
nullslop-echo = { path = "actors/nullslop-echo" }
nullslop-llm = { path = "actors/nullslop-llm" }
nullslop-actor = { path = "crates/nullslop-actor" }
nullslop-actor-host = { path = "crates/nullslop-actor-host" }
nullslop-providers = { path = "crates/nullslop-providers" }
nullslop-protocol-derive = { path = "crates/nullslop-protocol-derive" }

# Error handling
wherror = "2.3.1"
error-stack = { version = "0.7", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async / channels
tokio = { version = "1", features = ["full"] }
kanal = "0.1"
futures = "0.3"

# UI
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-which-key = "0.8.0"
ratatui-tabs = "0.2.0"
ratatui-spatial-splits = "0.1.1"

# State
parking_lot = "0.12"

# Time
jiff = { version = "0.2", features = ["serde"] }

# DX
derive_more = { version = "2", features = ["debug", "display"] }
rstest = "0.26"
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"

# LLM
llm = { version = "1.3", default-features = false, features = ["openrouter", "default-tls"] }

# Other
dirs = "6"
dotenvy = "0.15"
unicode-segmentation = "1"
async-trait = "0.1"
dialoguer = "0.12"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
implicit_hasher = "allow"
single_match = "allow"
