[package]
name = "nullslop-context-actor"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
nullslop-actor = { workspace = true }
nullslop-protocol = { workspace = true }
nullslop-context = { workspace = true }
nullslop-services = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
