[package]
name = "nullslop-tool-orchestrator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
nullslop-actor = { workspace = true }
nullslop-protocol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
