[package]
name = "nullslop-actor-host"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-actor = { workspace = true }
nullslop-protocol = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
kanal = { workspace = true }
parking_lot = { workspace = true }
derive_more = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
