[package]
name = "nullslop-actor"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-protocol = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
kanal = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
