[package]
name = "nullslop-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-tui = { workspace = true }
nullslop-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
