[package]
name = "nullslop-component"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-protocol = { workspace = true }
nullslop-component-core = { workspace = true }
nullslop-component-ui = { workspace = true }
nullslop-services = { workspace = true }
nullslop-providers = { workspace = true }
ratatui = { workspace = true }
throbber-widgets-tui = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
nullslop-actor-host = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
