[package]
name = "nullslop-core"
version = "0.1.0"
edition = "2024"

[dependencies]
wherror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
jiff = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
