[package]
name = "nullslop-core"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-protocol = { workspace = true }
nullslop-component = { workspace = true }
nullslop-component-core = { workspace = true }
kanal = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
jiff = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
nullslop-component = { workspace = true }
nullslop-component-ui = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
