[package]
name = "nullslop-ext-host"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-core = { workspace = true }
nullslop-extension = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
kanal = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
nullslop-protocol = { workspace = true }
nullslop-plugin = { workspace = true }
nullslop-plugin-ui = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
