[package]
name = "nullslop-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-core = { workspace = true }
nullslop-protocol = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
