[package]
name = "nullslop-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-protocol = { workspace = true }
nullslop-plugin-core = { workspace = true }
nullslop-plugin-ui = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
