[package]
name = "nullslop-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
derive_more = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
