[package]
name = "nullslop-protocol"
version = "0.1.0"
edition = "2024"

[features]
default = []
which-key = ["ratatui-which-key"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
derive_more = { workspace = true }
ratatui-which-key = { workspace = true, optional = true }
nullslop-protocol-derive = { workspace = true }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
