[package]
name = "nullslop-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
nullslop-core = { workspace = true }
nullslop-protocol = { workspace = true, features = ["which-key"] }
nullslop-actor-host = { workspace = true }
nullslop-component = { workspace = true }
nullslop-component-core = { workspace = true }
nullslop-component-ui = { workspace = true }
nullslop-services = { workspace = true }
wherror = { workspace = true }
error-stack = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
ratatui-which-key = { workspace = true }
ratatui-tabs = { workspace = true }
ratatui-spatial-splits = { workspace = true }
tokio = { workspace = true }
kanal = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
derive_more = { workspace = true }
unicode-segmentation = { workspace = true }
dialoguer = { workspace = true }
tracing = { workspace = true }
nullslop-selection-widget = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
nullslop-actor-host = { workspace = true }
nullslop-providers = { workspace = true }

[lints]
workspace = true
